# deepresearch

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: pytest.yml
common/: __init__.py
common/flags/: __init__.py  flags.py
common/logger/: __init__.py  get_logger.py
common/timeit/: __init__.py  timeit.py
src/: inference.py  train.py
src/datasets/: datasets.py
src/models/: model.py
tests/: test_inference.py  test_training.py
