[project]
name = "deepresearch"
version = "0.1.0"
description = ""
authors = [
    {name = "Henry",email = "toandaominh1997@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "transformers (>=4.48.2,<5.0.0)",
    "peft (>=0.14.0,<0.15.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "trl (>=0.14.0,<0.15.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
